# PyFirstPrincipalsLLM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  data_generator.py  demo_new_syntax.py  example_usage.py  expression_evaluator.py  math_llm.py  math_tokenizer.py  math_transformer.py  requirements.txt  test_equation_solving.py  test_interactive_x.py  test_math_llm.py  train.py  value_storage.py
ConsoleApp/: CMakeLists.txt  main.cpp
RPNCalculator/: CMakeLists.txt  main.cpp
